--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,24 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mymessenger">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:icon="@drawable/messenger_icon"
+        android:icon="@drawable/messenger"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/messenger_icon"
+        android:roundIcon="@drawable/messenger"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMessenger">
         <activity
-            android:name=".ForgotPasswordActivity"
+            android:name=".SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
-            android:name=".SignUpActivity"
+            android:name=".SignInActivity"
             android:exported="false" />
         <activity
-            android:name=".SignInActivity"
+            android:name=".AskActivity"
             android:exported="true" />
         <activity
             android:name=".SplashActivity"
