--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMessenger">
         <activity
-            android:name=".SignUpActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
-        <activity
-            android:name=".SignInActivity"
-            android:exported="false" />
-        <activity
             android:name=".AskActivity"
             android:exported="true" />
         <activity
@@ -35,6 +26,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity android:name=".MainActivity2"
+            android:exported="true"/>
 
         <meta-data
             android:name="preloaded_fonts"
