--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMessenger">
         <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".ChatActivity"
             android:exported="false" />
         <activity
@@ -34,9 +37,6 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity2"
             android:exported="true" />
 
         <meta-data
